jvmArgs should be passed as ENV variables (SPARKCENTRAL_MESSENGER_DEMOAPP_OPTS)